// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BadgeAttachment renders an img element with a base64 icon 1`] = `
<div>
  <a
    class=""
    data-placement="left"
    data-tooltip="Search-based results - click to see how these results are calculated and how to get precise intelligence with LSIF."
    href="https://docs.sourcegraph.com/code_intelligence/explanations/basic_code_intelligence"
    rel="noreferrer noopener"
    target="_blank"
  >
    <img
      src="data:image/svg+xml;base64,IDxzdmcgeG1sbnM9J2h0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnJyBzdHlsZT0id2lkdGg6MjRweDtoZWlnaHQ6MjRweCIgdmlld0JveD0iMCAwIDI0IDI0IiBmaWxsPSIjZmZmZmZmIj4gPHBhdGggZD0iIE0xMSwgOUgxM1Y3SDExTTEyLCAyMEM3LjU5LCAyMCA0LCAxNi40MSA0LCAxMkM0LCA3LjU5IDcuNTksIDQgMTIsIDRDMTYuNDEsIDQgMjAsIDcuNTkgMjAsIDEyQzIwLCAxNi40MSAxNi40MSwgMjAgMTIsIDIwTTEyLCAyQTEwLCAxMCAwIDAsIDAgMiwgMTJBMTAsIDEwIDAgMCwgMCAxMiwgMjJBMTAsIDEwIDAgMCwgMCAyMiwgMTJBMTAsIDEwIDAgMCwgMCAxMiwgMk0xMSwgMTdIMTNWMTFIMTFWMTdaIiAvPiA8L3N2Zz4g"
    />
  </a>
</div>
`;

exports[`BadgeAttachment renders an svg element with a predefined icon 1`] = `
<div>
  <a
    class=""
    data-placement="left"
    data-tooltip="Search-based results - click to see how these results are calculated and how to get precise intelligence with LSIF."
    href="https://docs.sourcegraph.com/code_intelligence/explanations/basic_code_intelligence"
    rel="noreferrer noopener"
    target="_blank"
  >
    <svg
      class="mdi-icon "
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
      />
    </svg>
  </a>
</div>
`;
